@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-10T16:07:00Z",
+  "timestamp" : "2022-06-15T00:32:58Z",
   "count_outdated" : 384,
   "uniques_outdated" : 81,
-  "count" : 394,
-  "uniques" : 88,
+  "count" : 396,
+  "uniques" : 89,
   "views" : [
     {
       "timestamp": "2022-06-06T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-14T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
