@@ -1,5 +1,5 @@
 {
-  "count": 10,
+  "count": 12,
   "uniques": 5,
   "views": [
     {
@@ -26,6 +26,11 @@
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-14T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
