@@ -1,3 +1,10 @@
+2022-06-15T00:32:58Z:
+* notice: last 14d: unq all: 5 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 81 384 / 88 394
+* notice: next accum: outdated-unq outdated-all / unq all: 81 384 / 89 396
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-14]
+
 2022-06-10T16:07:00Z:
 * notice: last 14d: unq all: 5 10
 * notice: prev accum: outdated-unq outdated-all / unq all: 81 384 / 87 393
